bookinfo/gateway-domain/shared-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: shared-gateway
  namespace: default
spec:
  gatewayClassName: istio
  listeners:
  # --- WEBOOK / BOOKINFO ---
  - name: http-bookinfo
    hostname: "webook.dnvinh99.xyz"
    port: 80
    protocol: HTTP
    allowedRoutes:
      namespaces:
        from: All
  - name: https-bookinfo
    hostname: "webook.dnvinh99.xyz"
    port: 443
    protocol: HTTPS
    tls:
      mode: Terminate
      certificateRefs:
      - name: bookinfo-tls-secret
    allowedRoutes:
      namespaces:
        from: All

  # --- GRAFANA ---
  - name: http-grafana
    hostname: "grafana.dnvinh99.xyz"
    port: 80
    protocol: HTTP
    allowedRoutes:
      namespaces:
        from: All
  - name: https-grafana
    hostname: "grafana.dnvinh99.xyz"
    port: 443
    protocol: HTTPS
    tls:
      mode: Terminate
      certificateRefs:
      - name: grafana-tls
    allowedRoutes:
      namespaces:
        from: All

  # --- ARGOCD ---
  - name: http-argocd
    hostname: "argocd.dnvinh99.xyz"
    port: 80
    protocol: HTTP
    allowedRoutes:
      namespaces:
        from: All
  - name: https-argocd
    hostname: "argocd.dnvinh99.xyz"
    port: 443
    protocol: HTTPS
    tls:
      mode: Terminate
      certificateRefs:
      - name: argocd-tls
    allowedRoutes:
      namespaces:
        from: All

  # --- VAULT ---
  - name: http-vault
    hostname: "vault.dnvinh99.xyz"
    port: 80
    protocol: HTTP
    allowedRoutes:
      namespaces:
        from: All
  - name: https-vault
    hostname: "vault.dnvinh99.xyz"
    port: 443
    protocol: HTTPS
    tls:
      mode: Terminate
      certificateRefs:
      - name: vault-tls
    allowedRoutes:
      namespaces:
        from: All
