bookinfo/gateway-domain/bookinfo-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: productpage
  namespace: default
spec:
  parentRefs:
  - name: shared-gateway
    namespace: default
  hostnames:
  - "webook.dnvinh99.xyz"
  rules:
  # Rule 1: Tự động chuyển hướng từ / sang /productpage
  - matches:
    - path:
        type: Exact
        value: /
    filters:
    - type: RequestRedirect
      requestRedirect:
        path:
          type: ReplaceFullPath
          value: /productpage
        statusCode: 302
  # Rule 2: Trỏ traffic tới service productpage
  - matches:
    - path:
        type: PathPrefix
        value: /productpage
    - path:
        type: PathPrefix
        value: /static
    - path:
        type: PathPrefix
        value: /login
    - path:
        type: PathPrefix
        value: /logout
    - path:
        type: PathPrefix
        value: /api/v1/products
    backendRefs:
    - name: productpage
      port: 9080
