bookinfo/gateway-domain/vault-destinationrule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: vault-destination-rule
  namespace: default
spec:
  host: vault.default.svc.cluster.local
  trafficPolicy:
    tls:
      mode: DISABLE
