bookinfo/gateway-domain/vault-dr.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: vault-disable-h2
  namespace: default
spec:
  host: vault.default.svc.cluster.local
  trafficPolicy:
    tls:
      mode: DISABLE
