bookinfo/gateway-domain/vault-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: vault-route
  namespace: default
spec:
  parentRefs:
  - name: shared-gateway
    namespace: default
  hostnames:
  - "vault.dnvinh99.xyz"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: vault
      port: 8200
